--- a/public/css/base.css
+++ b/public/css/base.css
@@ -16,6 +16,7 @@ tbody > tr:nth-child(odd) {
 }
 
 .grow-1 {
+  -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
@@ -34,6 +35,7 @@ tbody > tr:nth-child(odd) {
 }
 
 .flex-align-end {
+  -webkit-box-align: end;
   -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end;
@@ -58,6 +60,7 @@ tbody > tr:nth-child(odd) {
 }
 
 .flex {
+  display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -223,7 +226,9 @@ button {
 .anime .airing_status,
 .anime .user_rating,
 .anime .completion,
-.anime .age_rating {
+.anime .age_rating,
+.anime .edit,
+.anime .delete {
   background: none;
   text-align: center;
 }
@@ -240,6 +245,7 @@ button {
 .manga .row {
   width: 100%;
   background: rgba(0, 0, 0, 0.45);
+  display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
