--- a/public/css/base.myth.css
+++ b/public/css/base.myth.css
@@ -1,13 +1,21 @@
 :root {
+	--link-shadow: 1px 1px 1px #000;
 	--shadow: 1px 2px 1px rgba(0, 0, 0, 0.85);
 	--title-overlay: rgba(0, 0, 0, 0.45);
 	--text-color: #ffffff;
 	--normal-padding: 0.25em;
+	--link-hover-color: #7d12db;
+	--edit-link-hover-color: #db7d12;
+	--edit-link-color: #12db18;
 }
 
 template {display:none}
 
 body {margin: 0.5em;}
+
+a:hover, a:active {
+	color: var(--link-hover-color)
+}
 
 table {
 	width:85%;
@@ -16,6 +24,45 @@ table {
 
 tbody > tr:nth-child(odd) {
 	background: #ddd;
+}
+
+input[type=number] {
+	width: 4em;
+}
+
+.form { width:100%; }
+.form tr > td:nth-child(odd) {
+	text-align:right;
+	min-width:25px;
+	max-width:30%;
+}
+.form tr > td:nth-child(even) {
+	text-align:left;
+	min-width:70%;
+}
+
+.form thead th, .form thead tr {
+	background: inherit;
+	border:0;
+}
+
+.form.invisible tr:nth-child(odd) {
+	background: inherit;
+}
+.form.invisible tr, .form.invisible td, .form.invisible th {
+	border:0;
+}
+
+.bracketed, h1 a {
+	text-shadow: var(--link-shadow);
+}
+.bracketed:before {content: '[\00a0'}
+.bracketed:after {content: '\00a0]'}
+.bracketed {
+	color:  var(--edit-link-color);
+}
+.bracketed:hover, .bracketed:active {
+	color: var(--edit-link-hover-color)
 }
 
 .grow-1 {flex-grow: 1}
@@ -96,12 +143,14 @@ button {
 		.media:hover > .medium_metadata > div,
 		.media:hover > .table .row
 		{
+			transition: .25s ease;
 			background:rgba(0,0,0,0.75);
 		}
 
 		.media:hover > button[hidden],
 		.media:hover > .edit_buttons[hidden]
 		{
+			transition: .25s ease;
 			display:block;
 		}
 
@@ -203,6 +252,10 @@ button {
 	padding:0 inherit;
 }
 
+.anime .row > span, .manga .row > span {
+	text-align:left;
+}
+
 .anime .row > div, .manga .row > div {
 	font-size:0.8em;
 	display:flex-item;
@@ -213,8 +266,10 @@ button {
 
 .anime .media > button.plus_one {
 	position:absolute;
-	top: calc(50% - (43px / 2));
-	left: calc(50% - (97px / 2 + 18));
+	top: 138px;
+	top: calc(50% - 21.5px);
+	left: 44px;
+	left: calc(50% - 66.5px);
 }
 
 /* -----------------------------------------------------------------------------
