--- a/public/css/marx.css
+++ b/public/css/marx.css
@@ -14,8 +14,8 @@ audio:not([controls]) {
 details {
   display: block; }
 
-input[type="number"] {
-  width: auto; }
+/*input[type="number"] {
+  width: auto; }*/
 input[type="search"] {
   -webkit-appearance: textfield; }
   input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
@@ -77,7 +77,7 @@ audio, canvas, iframe, img, svg, video {
   vertical-align: middle; }
 
 button, input, select, textarea {
-  background-color: transparent;
+  /*background-color: transparent;*/
   border: .1rem solid #ccc;
   color: inherit;
   font-family: inherit;
