--- a/public/css/base.css
+++ b/public/css/base.css
@@ -353,6 +353,10 @@ button {
 	Manga-list-specific styles
 ------------------------------------------------------------------------------*/
 
+.manga .row {
+  padding: 1px;
+}
+
 .manga .media {
   border: 1px solid #ddd;
   width: 200px;
@@ -362,6 +366,8 @@ button {
 
 .manga .media > .edit_buttons {
   position: absolute;
+  top: 86px;
   top: calc(50% - 58.5px);
+  left: 5px;
   left: calc(50% - 95px);
 }
