--- a/public/css/base.css
+++ b/public/css/base.css
@@ -20,6 +20,20 @@ tbody > tr:nth-child(odd) {
   background: #ddd;
 }
 
+/* Table sorting styles */
+
+th.sorting::after {
+  content: " ↕ ";
+}
+
+th.sorting_asc::after {
+  content: " ↑ ";
+}
+
+th.sorting_desc::after {
+  content: " ↓ ";
+}
+
 input[type=number] {
   width: 4em;
 }
