--- a/public/css/base.css
+++ b/public/css/base.css
@@ -452,7 +452,7 @@ h1 a {
 }
 
 .media > .name > a {
-  text-align: justify;
+  /*text-align:justify;*/
   background: none;
   color: #fff;
   text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.85);
@@ -466,13 +466,7 @@ h1 a {
 .manga .name {
   text-align: center;
   width: 100%;
-  padding: 0.5em 0;
-}
-
-.anime .name > a {
-  text-align: center;
-  width: 100%;
-  padding: 0.5em 1em;
+  padding: 0.5em 0.25em;
 }
 
 .anime .media_type,
