Fix anime collection selection template to match db schema

--- a/public/templates/anime-ajax-search-results.html
+++ b/public/templates/anime-ajax-search-results.html
@@ -1,7 +1,7 @@
 {{#anime}}
 <article class="media search">
 	<div class="name" style="background-image:url({{cover_image}})">
-		<input type="radio" class="big-check" id="{{slug}}" name="id" value="{{slug}}" />
+		<input type="radio" class="big-check" id="{{slug}}" name="id" value="{{id}}" />
 		<label for="{{slug}}">
 			<span>{{title}}<br />{{alternate_title}}</span>
 		</label>
