Add ability to delete items from anime list. References #10

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -152,6 +152,19 @@ h1 a {
   margin: 0 auto;
 }
 
+.danger {
+  background-color: #ff4136;
+  border-color: #924949;
+  color: #fff;
+}
+
+.danger:hover,
+.danger:active {
+  background-color: #924949;
+  border-color: #ff4136;
+  color: #fff;
+}
+
 /* -----------------------------------------------------------------------------
 	CSS loading icon
 ------------------------------------------------------------------------------*/
