--- a/public/css/base.css
+++ b/public/css/base.css
@@ -323,7 +323,7 @@ h1 a {
 
 .form tr > td:nth-child(even) {
   text-align: left;
-  min-width: 70%;
+  width: 70%;
 }
 
 .invisible tbody > tr:nth-child(odd) {
