--- a/public/css/base.css
+++ b/public/css/base.css
@@ -165,6 +165,17 @@ h1 a {
   color: #fff;
 }
 
+.user-btn {
+  border-color: #12db18;
+  color: #12db18;
+}
+
+.user-btn:hover,
+.user-btn:active {
+  border-color: #db7d12;
+  background-color: #db7d12;
+}
+
 /* -----------------------------------------------------------------------------
 	CSS loading icon
 ------------------------------------------------------------------------------*/
