--- a/public/css/base.css
+++ b/public/css/base.css
@@ -168,6 +168,9 @@ h1 a {
 .user-btn {
   border-color: #12db18;
   color: #12db18;
+  text-shadow: 1px 1px 1px #000;
+  padding: 0 0.5em;
+  padding: 0 0.5rem;
 }
 
 .user-btn:hover,
