--- a/public/css/base.css
+++ b/public/css/base.css
@@ -424,7 +424,7 @@ h1 a {
   text-align: center;
   width: 220px;
   height: 319px;
-  margin: 0.25em;
+  margin: 0.25em 0.125em;
 }
 
 .media .edit_buttons > button {
@@ -438,7 +438,7 @@ h1 a {
   text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.85);
   background: rgba(0, 0, 0, 0.45);
   color: #ffffff;
-  padding: 0.25em;
+  padding: 0.25em 0.125em;
   text-align: right;
 }
 
@@ -481,7 +481,6 @@ h1 a {
 }
 
 .media > .name > a {
-  /*text-align:justify;*/
   background: none;
   color: #fff;
   text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.85);
@@ -675,4 +674,24 @@ h1 a {
 
 .details td:nth-child(even) {
   text-align: left;
+}
+
+/* ----------------------------------------------------------------------------
+	Viewport-based styles
+-----------------------------------------------------------------------------*/
+
+@media screen and (max-width: 40em) {
+  nav a {
+    line-height: 4em;
+    line-height: 4rem;
+  }
+
+  .media {
+    margin: 2px 0;
+  }
+
+  main {
+    padding: 0 0,5em 0.5em;
+    padding: 0 0.5rem 0.5rem;
+  }
 }
